<?xml version="1.0"?>
<package format="2">
  <name>gridmap_interface</name>
  <version>0.0.1</version>
  <description>The gridmap_interface package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>convex_plane_decomposition</depend>
  <depend>convex_plane_decomposition_ros</depend>
  <depend>visualization_msgs</depend>


  <export>
  </export>
</package>
