<?xml version="1.0"?>
<package format="2">
  <name>perceptive_mpc</name>
  <version>0.0.1</version>
  <description>The perceptive_mpc package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ocs2_quadruped_interface</depend>
  <depend>ocs2_anymal_mpc</depend>
  <depend>ocs2_switched_model_interface</depend>
  <depend>ocs2_anymal_commands</depend>
  <depend>tf</depend>

  <export>

  </export>
</package>
