<?xml version="1.0"?>
<package format="2">
  <name>tbai_bindings</name>
  <version>0.0.1</version>
  <description>The tbai_bindings package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ocs2_oc</depend>
  <depend>ocs2_msgs</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_legged_robot</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_legged_robot_ros</depend>
  <depend>ocs2_ros_interfaces</depend>
  <depend>pybind11_catkin</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
